# scientific_nini

./: .dockerignore  .env.example  .gitignore  .impeccable.md  AGENTS.md  AUTORESEARCH_AGENT_PROTOCOL.md  CHANGELOG.md  CLAUDE.md  CODE_REVIEW_REPORT.md  DEPLOYMENT_GUIDE.md  DEVELOPMENT_STATUS.md  PLAN_R_SUPPORT.md  README.md  SKILL.md  TODO_BACKLOG.md  WINDOWS_WEBVIEW_SHELL_PLAN.md  autoresearch_program.md  build_windows.bat  cloud_infrastructure_plan.md  coverage.json  dynamic-leaping-cray.md  nini-2.0-iteration-plan.md  nini.spec  package-lock.json  pyproject.toml  pyrightconfig.json  results.tsv  test_parse.js
.github/: copilot-instructions.md
ai_service/: .env.example  README.md  SUMMARY.md  __init__.py  main.py  requirements.txt
config/: intent_synonyms.yaml  release.conf.example
data/: .gitignore  AGENTS.md
design-system/: MASTER.md
docker/: .env.example  docker-compose.monitoring.yml  docker-compose.yml
docs/: README.md  adding-skills.md  api_reference.md  architecture-concepts.md  autoresearch-guide.md  capability-development-guide.md  cli_reference.md  configuration.md  desktop-testing-guide.md  development.md  evaluation-metrics.md  feature-module-inventory.md  hierarchical_knowledge_usage.md  high-risk-capability-review.md  intent_classification_analysis.md  logging-analysis-report.md  migration-phase1.md  multi_agent_architecture_plan.md  multi_agent_architecture_plan_v2.md  multi_agent_architecture_plan_v2_review.md  multi_agent_execution_plan.md  multi_agent_research_report.md  multi_agent_root_cause_remediation_20260407.md  nini-vision-charter-revised.md  nini-vision-charter.md  nini_20_features.md  nini_quickstart.md  optimization_plan.md  prompt-architecture.md  research_report.md  scienceclaw_benchmark_and_iteration_plan.md  skill-contract-spec.md  skills-compatibility.md  test_report.md  test_report_phase1.md  test_report_phase2.md  test_report_phase3.md  trust-output-and-human-review-interaction-spec.md  update-server-setup.md  user-experience-diagnosis-and-optimization.md  (+5 more)
frontend/: .env.example  .eslintrc.cjs  ARCHITECTURE.md  README.md  SETUP.md  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
learning-records/: INDEX.md
memory/: gsd_agent_analysis.md  gsd_research_report.md  hypothesis_driven_paradigm_research.md  memory-system-quick-reference.md  memory-system-research-report.md
openspec/: config.yaml
packaging/: README.md  installer.nsi
research/: cross-project-analysis.md  nini-2.0-architecture-audit-report.md
results/: harness_results.tsv  static_results.tsv
scientific_data_analysis_backend/: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  requirements.txt  run.py
scripts/: bake_version.py  check_event_schema_consistency.py  db-migrate.sh  deploy.sh  encrypt_builtin_key.py  generate_api_types.py  generate_nini_icon.py  generate_update_manifest.py  generate_upload_script.py  measure_baseline.py  measure_harness_baseline.py  measure_static_baseline.py  migrate_long_term_memory.py  prefetch_embedding_model.sh  prepare_offline_models.py  quick-start.sh  recalculate_cost_history.py  repair_session_reliability.py  repro_zhipu_messages.py  run_experiment.sh  run_harness_benchmarks.py  run_harness_experiment.sh  run_static_experiment.sh  sanitize_session_memory.py  server-init.sh  setup_update_server.sh  ssl-setup.sh  verify_memory_optimization.py  verify_release_conf.py  verify_update_manifest.py
tests/: client_utils.py  conftest.py  test_agent_registry.py  test_analysis_memory_integration.py  test_analysis_stage_detector.py  (+195 more)
(+1340 files in other folders)
