[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nini"
version = "0.1.0"
description = "科研数据分析 AI Agent 平台"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
dependencies = [
    # Web 框架
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "websockets>=14.0",
    "python-multipart>=0.0.18",

    # 数据分析
    "pandas>=2.2.0",
    "numpy>=1.26.0",
    "scipy>=1.14.0",
    "statsmodels>=0.14.0",
    "openpyxl>=3.1.0",

    # 可视化
    "plotly>=5.24.0",
    "kaleido>=0.2.1",

    # AI / LLM
    "openai>=1.58.0",
    "anthropic>=0.42.0",

    # 数据库
    "aiosqlite>=0.20.0",

    # 配置
    "pydantic-settings>=2.7.0",

    # 工具
    "aiofiles>=24.1.0",

    # 加密
    "cryptography>=44.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0",
    "httpx>=0.28.0",
    "black>=24.0",
    "mypy>=1.14",
]

[project.scripts]
nini = "nini.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["src/nini"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
